<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/AllMatch"
    android:layout_weight="1"
    app:layout_constraintHorizontal_weight="1"
    tools:context=".view.home.HomeFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/container_about_page"
        android:layout_width="0dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="6dp"
        android:layout_height="210dp"
        app:rippleColor="#027CCD"
        app:cardBackgroundColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintWidth_percent="0.4"
        app:layout_constraintEnd_toStartOf="@id/container_diagnose_page"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/cd_content_container">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_diagnose"
                android:layout_width="0dp"
                android:layout_height="160dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/ic_diagnose_images"
                android:contentDescription="@string/cd_diagnose_ico" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textAllCaps="true"
                app:layout_constraintTop_toBottomOf="@id/img_diagnose"
                android:layout_marginTop="10dp"
                android:text="About Disease"
                android:textSize="15sp"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:textStyle="bold"
                android:letterSpacing="0.05"
                android:fontFamily="@font/open_sans_reg"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/container_diagnose_page"
        app:layout_constraintWidth_percent="0.4"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="10dp"
        app:rippleColor="#027CCD"
        android:layout_width="0dp"
        android:layout_height="210dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/container_about_page"
        app:layout_constraintCircleRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_bg_content_container"
        android:contentDescription="@string/cd_content_container">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_heart"
                android:layout_width="0dp"
                android:layout_height="160dp"
                android:layout_gravity="center_horizontal"
                android:scaleType="fitXY"
                android:src="@drawable/heart_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/cd_heart_ico" />

            <TextView
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_heart"
                android:textColor="@android:color/white"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:textAllCaps="true"
                android:layout_height="wrap_content"
                android:text="Diagnose Disease"
                android:fontFamily="@font/open_sans_reg"
                android:textSize="15sp"
                android:gravity="center"
                android:textStyle="bold"
                android:letterSpacing="0.05"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>