<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    style="@style/AllMatch.PrimaryBackground">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/doctor_image"
        android:layout_gravity="center_horizontal"
        style="@style/MediumImageSize.LargeTopBarrier"
        android:src="@drawable/doctor_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/input_container"
        android:layout_width="0dp"
        app:cardCornerRadius="10dp"
        android:layout_height="200dp"
        android:translationY="-50dp"
        android:layout_marginStart="@dimen/large_const_barrier_size"
        android:layout_marginEnd="@dimen/large_const_barrier_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/doctor_image">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/medium_const_barrier_size">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/MatchWrap.TextInputLayout.UsernameAppearances"
                android:id="@+id/username_input_layout"
                android:contentDescription="Layout for provide username input"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inp_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="6dp"
                style="@style/MatchWrap.TextInputLayout.PasswordAppearances"
                android:id="@+id/password_input_layout"
                android:contentDescription="Layout for provide password input"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/username_input_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inp_password"
                    style="@style/TextAppearance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>
            
            <TextView
                android:visibility="invisible"
                android:id="@+id/tv_state_sign"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password_input_layout"
                android:text="Wrong Username/Password*"
                android:textSize="12sp"
                android:layout_marginTop="6dp"
                android:textColor="@color/colorWarning"
                android:gravity="center"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <android.widget.Button
        android:id="@+id/btn_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign In"
        android:translationZ="12dp"
        android:elevation="10dp"
        android:letterSpacing="0.05"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:textColor="@android:color/white"
        android:background="@drawable/bg_shape_rect"
        app:layout_constraintBottom_toBottomOf="@id/input_container"
        android:translationY="-25dp"
        app:layout_constraintStart_toStartOf="@id/input_container"
        app:layout_constraintEnd_toEndOf="@id/input_container"/>

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:text="@string/forgot_password"
        app:layout_constraintStart_toStartOf="@id/input_container"
        app:layout_constraintEnd_toEndOf="@id/input_container"
        app:layout_constraintTop_toBottomOf="@id/btn_sign_in"
        android:gravity="center"
        android:textSize="14sp"
        android:textColor="@android:color/white"
        android:fontFamily="@font/open_sans_reg"
        />

    <TextView
        android:id="@+id/tv_questioning_account"
        android:layout_width="0dp"
        android:lineSpacingMultiplier="1.2"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:fontFamily="@font/open_sans_reg"
        app:layout_constraintStart_toStartOf="@id/input_container"
        app:layout_constraintEnd_toEndOf="@id/input_container"
        app:layout_constraintTop_toBottomOf="@id/tv_forgot_password"
        android:text="@string/no_account_text"
        android:contentDescription="@string/info_for_create_account"
        android:gravity="center"
        android:textColor="@android:color/white"/>

    <android.widget.Button
        android:id="@+id/btn_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:minHeight="5dp"
        android:padding="8dp"
        android:layout_marginBottom="10dp"
        android:textAllCaps="false"
        android:letterSpacing="0.05"
        android:textStyle="normal"
        android:fontFamily="@font/roboto_reg"
        android:background="@drawable/bg_clear_stroke"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="Sign Up"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/tv_questioning_account"
        />

    <ImageView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_wave"
        android:scaleType="fitXY"
        android:tint="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/btn_sign_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/wave_description" />

</androidx.constraintlayout.widget.ConstraintLayout>